# chat-rag

./: .env  .gitignore  README.md  pyproject.toml
src/: app.py  rag.py  test_embeddings.py  test_pdf_loader.py
