[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langsmith>=0.3.42",
    "protobuf==3.20.3",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
]
